--- a/style.css
+++ b/style.css
@@ -1,15 +1,82 @@
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+html{
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+section{
+  padding: 100px 0;
+}
+.max-width{
+  max-width: 1300px;
+  padding: 0 80px;
+  margin: auto;
+}
+.about, .services,.contact, footer{
+  font-family: 'Poppins', sans-serif;
+}
+.about .about-content,
+.services .serv-content,
+.skills .skills-content,
+.contact .contact-content{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+section .title{
+  position: relative;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 60px;
+  padding-bottom: 20px;
+  font-family: 'Ubuntu', sans-serif;
+}
+section .title::before{
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  width: 180px;
+  height: 3px;
+  background: #111;
+  transform: translateX(-50%);
+}
+section .title::after{
+  position: absolute;
+  bottom: -8px;
+  left: 50%;
+  font-size: 20px;
+  color: rgb(30, 20, 220);
+  padding: 0 5px;
+  background: #fff;
+  transform: translateX(-50%);
+}
   
   body {
     font-family: Arial, sans-serif;
   }
-  
-  /* Navigation */
   nav {
     position: fixed;
     top: 0;
@@ -27,7 +94,21 @@
     color: #fff;
     font-size: 2em;
     margin-left: 20px; 
+    display: flex;
   }
+  .logo:hover{
+    color: rgb(30, 20, 220);
+  }
+  .logo p{
+    margin-left:0.5em;
+    font-size: 1em;
+    font-weight:600;
+  }
+  .logo p:hover{
+    color: rgb(30, 20, 220);
+    cursor: pointer;
+  }
+
   
   .nav-links {
     list-style: none;
@@ -43,89 +124,395 @@
     text-decoration: none;
     color: #fff;
     font-size: 1.2em;
+    margin: 0.5em;
   }
-  
+  .nav-links li a:hover{
+    color: rgb(30, 20, 220);
+}
+  .nav-links i {
+    color: #fff;
+    font-size: 1.2em;
+  }
+  .nav-links i:hover{
+    color: rgb(30, 20, 220);
+    cursor: pointer;
+  }
+  /* menu btn styling */
+.menu-btn{
+  color: #fff;
+  font-size: 23px;
+  cursor: pointer;
+  display: none;
+}
+.scroll-up-btn{
+  position: fixed;
+  height: 45px;
+  width: 42px;
+  background: crimson;
+  right: 30px;
+  bottom: 10px;
+  text-align: center;
+  line-height: 45px;
+  color: #fff;
+  z-index: 9999;
+  font-size: 30px;
+  border-radius: 6px;
+  border-bottom-width: 2px;
+  cursor: pointer;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
+.scroll-up-btn.show{
+  bottom: 30px;
+  opacity: 1;
+  pointer-events: auto;
+}
+.scroll-up-btn:hover{
+  filter: brightness(90%);
+}
   /* Home section */
   .home {
-  background-image: url('https://img.freepik.com/free-vector/gradient-golden-luxury-background_23-2149055480.jpg?w=996&t=st=1715601822~exp=1715602422~hmac=8839e4e27a3a62f778ba7fabfff9a891ff46510804371754680da9f0ee9ffef6'); /* Replace 'your-image-url.jpg' with the URL of your background image */
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed; 
-  height: 100vh; 
-  color: #fff; 
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  }
-  
-  .home .max-width {
-    padding: 0 20px;
-    margin: auto;
-  }
-  
-  .home h2 {
-    font-size: 3em;
-    margin-bottom: 20px;
-  }
-  
-  .home p {
-    font-size: 1.2em;
-    line-height: 1.6;
-  }
-  .content{
-    margin-top:0%;
-  }
+    background-image: url('https://img.freepik.com/free-vector/gradient-golden-luxury-background_23-2149055480.jpg?w=996&t=st=1715601822~exp=1715602422~hmac=8839e4e27a3a62f778ba7fabfff9a891ff46510804371754680da9f0ee9ffef6'); /* Replace 'your-image-url.jpg' with the URL of your background image */
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed; 
+    height: 100vh; 
+    color: #fff; 
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    }
+    .heading{
+      color: blue;
+    }
+    
+    .home .max-width {
+      padding: 0 20px;
+      margin: auto;
+    }
+    
+    .home h2 {
+      font-size: 3em;
+      margin-bottom: 20px;
+    }
+    
+    .home p {
+      font-size: 1.2em;
+      line-height: 1.6;
+    }
+    .content{
+      margin-top:0%;
+    }
   
   /* About section */
-  .about {
-    background-color: #f1f1f1; 
-    padding: 100px 0;
-    color: #333; 
-  }
-  
-  .about .max-width {
-    padding: 0 20px;
-    margin: auto;
-  }
-  
-  .about .content {
+  .about .title::after{
+    content: "who we are";
+}
+.about .about-content .left{
+    width: 45%;
+}
+.about .about-content .left img{
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+.about .about-content .right{
+    width: 55%;
+}
+.about .about-content .right .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.about .about-content .right .text span{
+    color: rgb(30, 20, 220);
+}
+.about .about-content .right p{
+    text-align: justify;
+}
+.about .about-content .right a{
+    display: inline-block;
+    background: rgb(30, 20, 220);
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid rgb(30, 20, 220);
+    transition: all 0.3s ease;
+}
+.about .about-content .right a:hover{
+    color: rgb(30, 20, 220);
+    background: none;
+}
+  /* services section styling */
+  .services{
+    color:#fff;
+    background: #111;
+}
+.services .title::before{
+    background: #fff;
+}
+.services .title::after{
+    background: #111;
+    content: "what we provide";
+}
+.services .serv-content .card{
+    width: calc(33% - 20px);
+    background: #222;
     text-align: center;
-  }
-  
-  .about h2 {
-    font-size: 3em;
-    margin-bottom: 20px;
-  }
-  
-  .about p {
-    font-size: 1.2em;
-    line-height: 1.6;
-  }
+    border-radius: 6px;
+    padding: 50px 25px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.services .serv-content .card:hover{
+    background: rgb(30, 20, 220);
+}
+.services .serv-content .card .box{
+    transition: all 0.3s ease;
+}
+.services .serv-content .card:hover .box{
+    transform: scale(1.05);
+}
+.services .serv-content .card i{
+    font-size: 50px;
+    color: rgb(30, 20, 220);
+    transition: color 0.3s ease;
+}
+.services .serv-content .card:hover i{
+    color: #fff;
+}
+.services .serv-content .card .text{
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+}
   
   /* Contact section */
-  .contact {
-    background-color: #333;
+  .contact .title::after{
+    content: "get in touch";
+}
+.contact .contact-content .column{
+    width: calc(50% - 30px);
+}
+.contact .contact-content .text{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.contact .contact-content .left p{
+    text-align: justify;
+}
+.contact .contact-content .left .icons{
+    margin: 10px 0;
+}
+.contact .contact-content .row{
+    display: flex;
+    height: 65px;
+    align-items: center;
+}
+.contact .contact-content .row .info{
+    margin-left: 30px;
+}
+.contact .contact-content .row i{
+    font-size: 25px;
+    color: rgb(30, 20, 220);
+}
+.contact .contact-content .info .head{
+    font-weight: 500;
+}
+.contact .contact-content .info .sub-title{
+    color: #333;
+}
+.contact .right form .fields{
+    display: flex;
+}
+.contact .right form .field,
+.contact .right form .fields .field{
+    height: 45px;
+    width: 100%;
+    margin-bottom: 15px;
+}
+.contact .right form .textarea{
+    height: 80px;
+    width: 100%;
+}
+.contact .right form .name{
+    margin-right: 10px;
+}
+.contact .right form .field input,
+.contact .right form .textarea textarea{
+    height: 100%;
+    width: 100%;
+    border: 1px solid lightgrey;
+    border-radius: 6px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 17px;
+    font-family: 'Poppins', sans-serif;
+    transition: all 0.3s ease;
+}
+.contact .right form .field input:focus,
+.contact .right form .textarea textarea:focus{
+    border-color: #b3b3b3;
+}
+.contact .right form .textarea textarea{
+  padding-top: 10px;
+  resize: none;
+}
+.contact .right form .button-area{
+  display: flex;
+  align-items: center;
+}
+.right form .button-area button{
+  color: #fff;
+  display: block;
+  width: 160px!important;
+  height: 45px;
+  outline: none;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 6px;
+  cursor: pointer;
+  flex-wrap: nowrap;
+  background: rgb(30, 20, 220);
+  border: 2px solid rgb(30, 20, 220);
+  transition: all 0.3s ease;
+}
+.right form .button-area button:hover{
+  color: rgb(30, 20, 220);
+  background: none;
+}
+  /* footer section styling */
+footer{
+    background: #111;
+    padding: 15px 23px;
     color: #fff;
-    padding: 100px 0;
-  }
-  
-  .contact .max-width {
-    padding: 0 20px;
-    margin: auto;
-  }
-  
-  .contact .content {
     text-align: center;
+}
+footer span a{
+    color: rgb(30, 20, 220);
+    text-decoration: none;
+}
+footer span a:hover{
+    text-decoration: underline;
+}
+
+/* responsiveness  */
+
+/* Adjustments for About section */
+.about .about-content .left img {
+  height: 350px;
+  width: 350px;
+}
+
+/* Adjustments for Max Width */
+@media (max-width: 991px) {
+  .max-width {
+      padding: 0 50px;
   }
-  
-  .contact h2 {
-    font-size: 3em;
-    margin-bottom: 20px;
+}
+
+/* Menu Button Styling and Navbar Responsiveness */
+.about .about-content .left img{
+  height: 350px;
+  width: 350px;
+}
+
+/* Adjustments for Max Width */
+@media (max-width: 991px) {
+  .max-width{
+      padding: 0 50px;
   }
-  
-  .contact p {
-    font-size: 1.2em;
-    line-height: 1.6;
+}
+
+/* Menu Button Styling and Navbar Responsiveness */
+@media (max-width: 947px){
+  .menu-btn{
+      display: block;
+      z-index: 999;
   }
+  .menu-btn i.active:before{
+      content: "\f00d";
+  }
+  .nav-links{
+      position: fixed;
+      height: 100vh;
+      width: 100%;
+      left: -100%;
+      top: 0;
+      background: #111;
+      text-align: center;
+      padding-top: 80px;
+      transition: all 0.3s ease;
+  }
+  .nav-links.active{
+      left: 0;
+  }
+  .nav-links li{
+      display: block;
+  }
+  .nav-links li a{
+      display: inline-block;
+      margin: 20px 0;
+      font-size: 25px;
+  }
+  .home .home-content .text-2{
+      font-size: 70px;
+  }
+  .home .home-content .text-3{
+      font-size: 35px;
+  }
+  .home .home-content a{
+      font-size: 23px;
+      padding: 10px 30px;
+  }
+  .max-width{
+      max-width: 930px;
+  }
+  .about .about-content .column{
+      width: 100%;
+  }
+  .about .about-content .left{
+      display: flex;
+      justify-content: center;
+      margin: 0 auto 60px;
+  }
+  .about .about-content .right{
+      flex: 100%;
+  }
+  .services .serv-content .card{
+      width: calc(50% - 10px);
+      margin-bottom: 20px;
+  }
+  .skills .skills-content .column,
+  .contact .contact-content .column{
+      width: 100%;
+      margin-bottom: 35px;
+  }
+}
+
+/* Home Section Responsiveness */
+@media (max-width: 690px) {
+  .max-width{
+      padding: 0 23px;
+  }
+  .home .home-content .text-2{
+      font-size: 60px;
+  }
+  .home .home-content .text-3{
+      font-size: 32px;
+  }
+  .home .home-content a{
+      font-size: 20px;
+  }
+  .services .serv-content .card{
+      width: 100%;
+  }
+}
   
