--- a/style.css
+++ b/style.css
@@ -202,7 +202,69 @@ section .title::after{
       margin-top:0%;
     }
 
+  /* Github section stylling */
+  .github {
+    color: #fff;
+    background: #111;
+    height: 100vh;
+  }
   
+  .github .title::before {
+    background: #fff;
+  }
+  
+  .github .title::after {
+    background: #111;
+    content: "see our repo";
+  }
+  
+  .github .github-card {
+    width: 100%;
+    height: 65vh;
+    background: #222;
+    text-align: center;
+    border-radius: 6px;
+    padding: 25px;
+    display: flex;
+    align-items: center; 
+    flex-direction: column;
+  }
+  
+  .github .github-card .box {
+    margin-bottom: 20px;
+  }
+  
+  .github .github-card input[type="text"] {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 10px; 
+    margin-right: 10px;
+  }
+  
+  .github .github-card button.btn {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .github .github-card button.btn:hover {
+    background-color: #0056b3;
+  }
+  
+  #userData {
+    text-align: left;
+  }
+  .github .github-card hr {
+    width: 100%;
+    margin: 20px 0;
+    border: none;
+    border-top: 1px solid #ccc;
+  }
   /* About section */
   .about .title::after{
     content: "who we are";
@@ -449,7 +511,9 @@ footer span a:hover{
       transition: all 0.3s ease;
   }
   .nav-links.active{
-      left: 0;
+    left: 0;
+    flex-direction: column; 
+    align-items: center;
   }
   .nav-links li{
       display: block;
@@ -459,20 +523,15 @@ footer span a:hover{
       margin: 20px 0;
       font-size: 25px;
   }
-  .home .home-content .text-2{
-      font-size: 70px;
-  }
-  .home .home-content .text-3{
-      font-size: 35px;
-  }
-  .home .home-content a{
+  
+  .home  a{
       font-size: 23px;
       padding: 10px 30px;
   }
   .max-width{
       max-width: 930px;
   }
-  .about .about-content .column{
+  .about  .column{
       width: 100%;
   }
   .about .about-content .left{
@@ -480,15 +539,15 @@ footer span a:hover{
       justify-content: center;
       margin: 0 auto 60px;
   }
-  .about .about-content .right{
+  .about .right{
       flex: 100%;
   }
-  .services .serv-content .card{
+  .services .card{
       width: calc(50% - 10px);
       margin-bottom: 20px;
   }
-  .skills .skills-content .column,
-  .contact .contact-content .column{
+  .skills .column,
+  .contact .column{
       width: 100%;
       margin-bottom: 35px;
   }
@@ -499,16 +558,11 @@ footer span a:hover{
   .max-width{
       padding: 0 23px;
   }
-  .home .home-content .text-2{
-      font-size: 60px;
-  }
-  .home .home-content .text-3{
-      font-size: 32px;
-  }
-  .home .home-content a{
+
+  .home a{
       font-size: 20px;
   }
-  .services .serv-content .card{
+  .services .card{
       width: 100%;
   }
 }
