--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 *{
   margin: 0;
@@ -77,65 +76,65 @@ section .title::after{
   transform: translateX(-50%);
 }
 
-/* navbar stylling */
-  nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color:#5b5908;
-    z-index: 1000; 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
-  }
-  
-  .logo {
-    color: #fff;
-    font-size: 2em;
-    margin-left: 20px; 
-    display: flex;
-    font-weight: 600;
-    transition: color 0.3s ease, transform 0.3s ease; 
-  }
-  .logo i {
-    margin-right: 0.3em; /* Add margin to the right of the icon */
-  }
-  
-  .logo:hover {
-    color: rgb(30, 20, 220);
-    transform: scale(1.1);
-  }
-
-  
-  .nav-links {
-    list-style: none;
-    display: flex;
-    margin-right: 20px; 
-  }
-  
-  .nav-links li {
-    margin-right: 20px;
-  }
-  
-  .nav-links li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 1.2em;
-    margin: 0.5em;
-    transition: color 0.3s ease, 
-                transform 0.3s ease; 
-    transition-delay: 0.2s;
-  }
-  .nav-links li:hover{
-    transform: scale(1.1);
+/* navbar styling */
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color:#5b5908;
+  z-index: 1000; 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
 }
-  .nav-links i {
-    color: #fff;
-    font-size: 1.2em;
-  }
-  /* menu btn styling */
+
+.logo {
+  color: #fff;
+  font-size: 2em;
+  margin-left: 20px; 
+  display: flex;
+  font-weight: 600;
+  transition: color 0.3s ease, transform 0.3s ease; 
+}
+.logo i {
+  margin-right: 0.3em; /* Add margin to the right of the icon */
+}
+
+.logo:hover {
+  color: rgb(30, 20, 220);
+  transform: scale(1.1);
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  margin-right: 20px; 
+}
+
+.nav-links li {
+  margin-right: 20px;
+}
+
+.nav-links li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.2em;
+  margin: 0.5em;
+  transition: color 0.3s ease, 
+              transform 0.3s ease; 
+  transition-delay: 0.2s;
+}
+.nav-links li:hover{
+  transform: scale(1.1);
+}
+.nav-links i {
+  color: #fff;
+  font-size: 1.2em;
+}
+
+/* menu btn styling */
 .menu-btn{
   color: #fff;
   font-size: 23px;
@@ -169,256 +168,258 @@ section .title::after{
 .scroll-up-btn:hover{
   filter: brightness(90%);
 }
-  /* Home section */
-  .home {
-    background-image: url('https://img.freepik.com/free-vector/gradient-golden-luxury-background_23-2149055480.jpg?w=996&t=st=1715601822~exp=1715602422~hmac=8839e4e27a3a62f778ba7fabfff9a891ff46510804371754680da9f0ee9ffef6'); /* Replace 'your-image-url.jpg' with the URL of your background image */
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed; 
-    height: 100vh; 
-    color: #fff; 
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    }
-    
-    
-    .home .max-width {
-      padding: 0 20px;
-      margin: auto;
-    }
-    
-    .home h2 {
-      font-size: 3em;
-      margin-bottom: 20px;
-    }
-    
-    .home p {
-      font-size: 1.2em;
-      line-height: 1.6;
-    }
-    .content{
-      margin-top:0%;
-    }
+/* Home section */
+.home {
+  background-image: url('https://img.freepik.com/free-vector/gradient-golden-luxury-background_23-2149055480.jpg?w=996&t=st=1715601822~exp=1715602422~hmac=8839e4e27a3a62f778ba7fabfff9a891ff46510804371754680da9f0ee9ffef6'); /* Replace 'your-image-url.jpg' with the URL of your background image */
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; 
+  height: 100vh; 
+  color: #fff; 
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
-  /* Github section stylling */
-  .github {
-    color: #fff;
-    background: #111;
-    height: 100vh;
-  }
-  
-  .github .title::before {
-    background: #fff;
-  }
-  
-  .github .title::after {
-    background: #111;
-    content: "see our repo";
-  }
-  
-  .github .github-card {
-    width: 100%;
-    height: 65vh;
-    background: #222;
-    text-align: center;
-    border-radius: 6px;
-    padding: 25px;
-    display: flex;
-    align-items: center; 
-    flex-direction: column;
-  }
-  
-  .github .github-card .box {
-    margin-bottom: 20px;
-  }
-  
-  .github .github-card input[type="text"] {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-bottom: 10px; 
-    margin-right: 10px;
-  }
-  
-  .github .github-card button.btn {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .github .github-card button.btn:hover {
-    background-color: #0056b3;
-  }
-  
-  #userData {
-    text-align: left;
-  }
-  .github .github-card hr {
-    width: 100%;
-    margin: 20px 0;
-    border: none;
-    border-top: 1px solid #ccc;
-  }
-  /* About section */
-  .about .title::after{
-    content: "who we are";
+
+.home .max-width {
+  padding: 0 20px;
+  margin: auto;
+}
+
+.home h2 {
+  font-size: 3em;
+  margin-bottom: 20px;
+}
+
+.home p {
+  font-size: 1.2em;
+  line-height: 1.6;
+}
+.content{
+  margin-top:0%;
+}
+
+/* Github section styling */
+.github {
+  color: #fff;
+  background: #111;
+  height: 100vh;
+}
+
+.github .title::before {
+  background: #fff;
+}
+
+.github .title::after {
+  background: #111;
+  content: "see our repo";
+}
+
+.github .github-card {
+  width: 100%;
+  height: 65vh;
+  background: #222;
+  text-align: center;
+  border-radius: 6px;
+  padding: 25px;
+  display: flex;
+  align-items: center; 
+  flex-direction: column;
+}
+
+.github .github-card .box {
+  margin-bottom: 20px;
+}
+
+.github .github-card input[type="text"] {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px; 
+  margin-right: 10px;
+}
+
+.github .github-card button.btn {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.github .github-card button.btn:hover {
+  background-color: #0056b3;
+}
+
+#userData {
+  text-align: left;
+}
+.github .github-card hr {
+  width: 100%;
+  margin: 20px 0;
+  border: none;
+  border-top: 1px solid #ccc;
+}
+
+/* About section styling */
+.about .title::after{
+  content: "who we are";
 }
 .about .about-content .left{
-    width: 45%;
+  width: 45%;
 }
 .about .about-content .left img{
-    height: 400px;
-    width: 400px;
-    object-fit: cover;
-    border-radius: 6px;
+  height: 400px;
+  width: 400px;
+  object-fit: cover;
+  border-radius: 6px;
 }
 .about .about-content .right{
-    width: 55%;
+  width: 55%;
 }
 .about .about-content .right .text{
-    font-size: 25px;
-    font-weight: 600;
-    margin-bottom: 10px;
+  font-size: 25px;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: rgb(30, 20, 220);
+  color: rgb(30, 20, 220);
 }
 .about .about-content .right p{
-    text-align: justify;
+  text-align: justify;
 }
 .about .about-content .right a{
-    display: inline-block;
-    background: rgb(30, 20, 220);
-    color: #fff;
-    font-size: 20px;
-    font-weight: 500;
-    padding: 10px 30px;
-    margin-top: 20px;
-    border-radius: 6px;
-    border: 2px solid rgb(30, 20, 220);
-    transition: all 0.3s ease;
+  display: inline-block;
+  background: rgb(30, 20, 220);
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 10px 30px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid rgb(30, 20, 220);
+  transition: all 0.3s ease;
 }
 .about .about-content .right a:hover{
-    color: rgb(30, 20, 220);
-    background: none;
+  color: rgb(30, 20, 220);
+  background: none;
 }
-  /* services section styling */
-  .services{
-    color:#fff;
-    background: #111;
+
+/* Services section styling */
+.services{
+  color:#fff;
+  background: #111;
 }
 .services .title::before{
-    background: #fff;
+  background: #fff;
 }
 .services .title::after{
-    background: #111;
-    content: "what we provide";
+  background: #111;
+  content: "what we provide";
 }
 .services .serv-content .card{
-    width: calc(33% - 20px);
-    background: #222;
-    text-align: center;
-    border-radius: 6px;
-    padding: 50px 25px;
-    cursor: pointer;
-    transition: all 0.3s ease;
+  width: calc(33% - 20px);
+  background: #222;
+  text-align: center;
+  border-radius: 6px;
+  padding: 50px 25px;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
 .services .serv-content .card:hover{
-    background: rgb(30, 20, 220);
+  background: rgb(30, 20, 220);
 }
 .services .serv-content .card .box{
-    transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 .services .serv-content .card:hover .box{
-    transform: scale(1.05);
+  transform: scale(1.05);
 }
 .services .serv-content .card i{
-    font-size: 50px;
-    color: rgb(30, 20, 220);
-    transition: color 0.3s ease;
+  font-size: 50px;
+  color: rgb(30, 20, 220);
+  transition: color 0.3s ease;
 }
 .services .serv-content .card:hover i{
-    color: #fff;
+  color: #fff;
 }
 .services .serv-content .card .text{
-    font-size: 25px;
-    font-weight: 500;
-    margin: 10px 0 7px 0;
+  font-size: 25px;
+  font-weight: 500;
+  margin: 10px 0 7px 0;
 }
-  
-  /* Contact section */
-  .contact .title::after{
-    content: "get in touch";
+
+/* Contact section styling */
+.contact .title::after{
+  content: "get in touch";
 }
 .contact .contact-content .column{
-    width: calc(50% - 30px);
+  width: calc(50% - 30px);
 }
 .contact .contact-content .text{
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 .contact .contact-content .left p{
-    text-align: justify;
+  text-align: justify;
 }
 .contact .contact-content .left .icons{
-    margin: 10px 0;
+  margin: 10px 0;
 }
 .contact .contact-content .row{
-    display: flex;
-    height: 65px;
-    align-items: center;
+  display: flex;
+  height: 65px;
+  align-items: center;
 }
 .contact .contact-content .row .info{
-    margin-left: 30px;
+  margin-left: 30px;
 }
 .contact .contact-content .row i{
-    font-size: 25px;
-    color: rgb(30, 20, 220);
+  font-size: 25px;
+  color: rgb(30, 20, 220);
 }
 .contact .contact-content .info .head{
-    font-weight: 500;
+  font-weight: 500;
 }
 .contact .contact-content .info .sub-title{
-    color: #333;
+  color: #333;
 }
 .contact .right form .fields{
-    display: flex;
+  display: flex;
 }
 .contact .right form .field,
 .contact .right form .fields .field{
-    height: 45px;
-    width: 100%;
-    margin-bottom: 15px;
+  height: 45px;
+  width: 100%;
+  margin-bottom: 15px;
 }
 .contact .right form .textarea{
-    height: 80px;
-    width: 100%;
+  height: 80px;
+  width: 100%;
 }
 .contact .right form .name{
-    margin-right: 10px;
+  margin-right: 10px;
 }
 .contact .right form .field input,
 .contact .right form .textarea textarea{
-    height: 100%;
-    width: 100%;
-    border: 1px solid lightgrey;
-    border-radius: 6px;
-    outline: none;
-    padding: 0 15px;
-    font-size: 17px;
-    font-family: 'Poppins', sans-serif;
-    transition: all 0.3s ease;
+  height: 100%;
+  width: 100%;
+  border: 1px solid lightgrey;
+  border-radius: 6px;
+  outline: none;
+  padding: 0 15px;
+  font-size: 17px;
+  font-family: 'Poppins', sans-serif;
+  transition: all 0.3s ease;
 }
 .contact .right form .field input:focus,
 .contact .right form .textarea textarea:focus{
-    border-color: #b3b3b3;
+  border-color: #b3b3b3;
 }
 .contact .right form .textarea textarea{
   padding-top: 10px;
@@ -447,25 +448,26 @@ section .title::after{
   color: rgb(30, 20, 220);
   background: none;
 }
-  /* footer section styling */
+
+/* Footer section styling */
 footer{
-    background: #111;
-    padding: 15px 23px;
-    color: #fff;
-    text-align: center;
+  background: #111;
+  padding: 15px 23px;
+  color: #fff;
+  text-align: center;
 }
 footer span a{
-    color: rgb(30, 20, 220);
-    text-decoration: none;
+  color: rgb(30, 20, 220);
+  text-decoration: none;
 }
 footer span a:hover{
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
-/* responsiveness  */
+/* Responsiveness */
 
 /* Adjustments for About section */
-.about .about-content .left img {
+.about .left img {
   height: 350px;
   width: 350px;
 }
@@ -473,12 +475,12 @@ footer span a:hover{
 /* Adjustments for Max Width */
 @media (max-width: 991px) {
   .max-width {
-      padding: 0 50px;
+    padding: 0 50px;
   }
 }
 
 /* Menu Button Styling and Navbar Responsiveness */
-.about .about-content .left img{
+.about .left img{
   height: 350px;
   width: 350px;
 }
@@ -486,29 +488,29 @@ footer span a:hover{
 /* Adjustments for Max Width */
 @media (max-width: 991px) {
   .max-width{
-      padding: 0 50px;
+    padding: 0 50px;
   }
 }
 
 /* Menu Button Styling and Navbar Responsiveness */
 @media (max-width: 947px){
   .menu-btn{
-      display: block;
-      z-index: 999;
+    display: block;
+    z-index: 999;
   }
   .menu-btn i.active:before{
-      content: "\f00d";
+    content: "\f00d";
   }
   .nav-links{
-      position: fixed;
-      height: 100vh;
-      width: 100%;
-      left: -100%;
-      top: 0;
-      background: #111;
-      text-align: center;
-      padding-top: 80px;
-      transition: all 0.3s ease;
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    left: -100%;
+    top: 0;
+    background: #111;
+    text-align: center;
+    padding-top: 80px;
+    transition: all 0.3s ease;
   }
   .nav-links.active{
     left: 0;
@@ -516,58 +518,58 @@ footer span a:hover{
     align-items: center;
   }
   .nav-links li{
-      display: block;
+    display: block;
   }
   .nav-links li a{
-      display: inline-block;
-      margin: 20px 0;
-      font-size: 25px;
+    display: inline-block;
+    margin: 20px 0;
+    font-size: 25px;
   }
-  
+
   .home  a{
-      font-size: 23px;
-      padding: 10px 30px;
+    font-size: 23px;
+    padding: 10px 30px;
   }
   .max-width{
-      max-width: 930px;
+    max-width: 930px;
   }
   .about  .column{
-      width: 100%;
+    width: 100%;
   }
   .about .about-content .left{
-      display: flex;
-      justify-content: center;
-      margin: 0 auto 60px;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto 60px;
   }
   .about .right{
-      flex: 100%;
+    flex: 100%;
   }
   .services .card{
-      width: calc(50% - 10px);
-      margin-bottom: 20px;
+    width: calc(50% - 10px);
+    margin-bottom: 20px;
   }
   .skills .column,
   .contact .column{
-      width: 100%;
-      margin-bottom: 35px;
+    width: 100%;
+    margin-bottom: 35px;
   }
 }
 
 /* Home Section Responsiveness */
 @media (max-width: 690px) {
   .max-width{
-      padding: 0 23px;
+    padding: 0 23px;
   }
 
   .home a{
-      font-size: 20px;
+    font-size: 20px;
   }
   .services .card{
-      width: 100%;
+    width: 100%;
   }
 }
 
-/* animation for home heading */
+/* Animation for home heading */
 .heading{
   color: blue;
   display: inline-block;
@@ -592,8 +594,7 @@ footer span a:hover{
   }
 }
   
-/* animation for all sections */
-
+/* Animation for all sections */
 .section {
   opacity: 0;
   animation: scaleIn 1s ease forwards;
@@ -679,4 +680,3 @@ button[type="submit"]:hover {
 .hidden {
   display: none;
 }
-
