--- a/style.css
+++ b/style.css
@@ -170,12 +170,12 @@ nav {
 }
 /* Home section */
 .home {
-  background-image: url('https://img.freepik.com/free-vector/gradient-golden-luxury-background_23-2149055480.jpg?w=996&t=st=1715601822~exp=1715602422~hmac=8839e4e27a3a62f778ba7fabfff9a891ff46510804371754680da9f0ee9ffef6'); /* Replace 'your-image-url.jpg' with the URL of your background image */
+  background-image: url('https://images.unsplash.com/photo-1548983965-416c1920352e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); 
   background-size: cover;
   background-position: center;
   background-attachment: fixed; 
   height: 100vh; 
-  color: #fff; 
+  color:antiquewhite; 
   text-align: center;
   display: flex;
   flex-direction: column;
